--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 {%- assign items = site.data.metadata -%}
-
+<p>test</p>
 {% include index/jumbotron.html %}
 
 <div class="row">
